ajout du login et fetch des données de l'accueil

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -5,6 +5,7 @@
 
 :root {
     --elem-color: #F9F9FC;
+    --elem-color-dark: #ebebee;
     --elem-border: #EEEEF1;
     --elem-text-color: #8388A7;
     --elem-text-color-active: #3F33C5;
