--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -122,10 +122,12 @@ main {
       color: var(--elem-text-color);
   }
 
-  .list > #ListTitle > button {
+  .list > #ListTitle > .button {
       -webkit-appearance: none;
       background: none;
       border: none;
+
+      text-decoration: none;
 
       margin: 0px;
       padding: 0px;
@@ -141,7 +143,7 @@ main {
       text-align: right;
       letter-spacing: 0.02em;
 
-      color: var(--elem-text-color-active);
+      color: var(--elem-text-color-active) !important;
 
       padding: 5px 10px;
       border-radius: 5px;
@@ -151,7 +153,7 @@ main {
 
 .NavigationContent {
     margin-top: 56px;
-    padding-bottom: 16px;
+    padding-bottom: 23px;
 }
 
 .notification {
@@ -165,4 +167,17 @@ main {
     margin-bottom: var(--menuPadding) !important;
     font-size: 16px;
     font-variation-settings: "wght" 500;
+}
+
+.NavigationList {
+    background: var(--elem-color);
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.2), 0px 1px 2px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    overflow: hidden;
+    transform: translateZ(0)
+}
+
+a {
+    color: inherit !important;
+    text-decoration: none !important;
 }
