--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -171,7 +171,10 @@ main {
 
 .NavigationList {
     background: var(--elem-color);
-    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.2), 0px 1px 2px rgba(0, 0, 0, 0.1);
+    box-shadow:
+            0px 1px 3px rgba(0, 0, 0, 0.15),
+            0px 1px 2px rgba(0, 0, 0, 0.1)
+        ;
     border-radius: 15px;
     overflow: hidden;
     transform: translateZ(0)
